# FluidSimulator

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  BUILDING.md  CMakeLists.txt  CODEX.md  DESCRIPTION.md  Dockerfile  PLAN.md  README.md  final_description.md
CGL/: CMakeLists.txt
app/src/: main.cpp
cli/include/fluid/: cli.h
cli/src/: cli.cpp
core/include/fluid/: core.h  init.h
core/src/: core.cpp  init.cpp
cuda/include/fluid/: cuda.h
cuda/src/: cuda_stub.cu
docs/: BUILDING.md  FINAL.md  MILESTONE.md
ext/nanogui/ext/eigen/unsupported/Eigen/CXX11/src/Tensor/: README.md
io/include/fluid/: vtk_writer.h
io/src/: vtk_writer.cpp
scene/: fluid.json  fluid_double_dem.json  fluid_double_side.json  fluid_double_splash.json  fluid_large.json  fluid_million.json  fluid_one_side.json  fluid_sphere.json  fluid_xlarge.json
scripts/: compare_cpu_cuda.sh
shaders/: Bump.frag  Bump.vert  Custom.frag  Custom.vert  Diffuse.frag  Displacement.vert  Mirror.frag  Normal.frag  Phong.frag  Texture.frag  Wireframe.frag
src/: CMakeLists.txt  clothSimulator.cpp  clothSimulator.h  cuNSearchMain.cu  fluid.cpp  fluid.h  fluidParameters.h  fluid_io.h  kernel.h  main.cpp  main.h  marchingCube.cpp  marchingCube.h  real.h  renderer.h  vector3R.h
src/collision/: collisionObject.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/cuda/: cudaFluid.cu  cudaFluid.cuh  cudaFluid.h  cudaMain.cpp  cudaMain.cu  cudaPlane.cuh  cudaUtils.h
src/misc/: file_utils.cpp  file_utils.h  sphere_drawing.cpp  sphere_drawing.h
